test/users/ssridhar/atomic/errors/atomicCompilerWarning.chpl
atomic compilerWarning("compilerWarning inside atomic statement.");
